@@ -500,3 +500,5 @@ speedLimitIsEnabled=Speed limit is enabled and set to value %s/s
 searchSubtitlesAction.Action.text=Search subtitles
 searchSubtitlesAction.Action.shortDescription=Search subtitles using opensubtitles.org
 searchSubtitlesAction.Action.smallIcon=${iconsPath}subtitles.png
+
+fileIsBeingAlreadyDownloading=File is being already downloading.
